--- a/Public/netflix.html
+++ b/Public/netflix.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Welcome</title>
-        <style>
-            h2:hover{
-                cursor: not-allowed;
-            }
-        </style>
+        <title></title>
     </head>
-    <body>
-        <h2>Welcome to github</h2>
-    </body>
 </html>
